2015-08-03  Niibe Yutaka  <gniibe@fsij.org>

	* tool/gnuk_token.py (gnuk_token.download, gnuk_token.execute)
	(regnual.download): Python3 fix.
	* tool/upgrade_by_passwd.py (maian): Python3 fix.
	* tool/usb_strings.py (main): Python3 fix.

2015-07-31  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure (output_vendor_product_serial_strings): Fix sed
	script when string is short.  Remove empty line.

	* regnual/regnual.c (usb_cb_ctrl_write_finish, usb_cb_setup)
	(usb_cb_get_descriptor, usb_cb_interface): Follow the change
	of USB API.

	* tool/stlinkv2.py: Support ST-Link/V2-1.

2015-07-28  Niibe Yutaka  <gniibe@fsij.org>

	* tool/stlinkv2.py: Fix for Python3.  Thanks to Bertrand Jacquin.

	* tool/gpg_agent.py: Fix for Python3.

	* src/usb-msc.c: Update from Fraucheky.

	* src/usb_stm32f103.c (struct DATA_INFO): Remove offset.
	(struct DEVICE_INFO): Integrate CONTROL_INFO.

2015-07-27  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_stm32f103.c (usb_lld_reply_request): New.
	(usb_lld_set_data_to_send): Remove.
	(usb_lld_set_data_to_recv): Not a macro but a function.
	(std_get_status): Don't use statically allocated memory.
	(std_get_configuration): Use usb_lld_reply_request.
	(handle_setup0): Follow the change.
	* src/usb_ctrl.c (vcom_port_data_setup, usb_cb_setup)
	(usb_cb_interface): Use	usb_lld_reply_request.
	* src/usb_desc.c (usb_cb_get_descriptor): Likewise.

2015-07-24  Niibe Yutaka  <gniibe@fsij.org>

	* tool/gnuk_put_binary.py: Remove.
	* tool/gnuk_remove_keys.py: Remove.

2015-07-23  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure (nl): New.  Follow the change of NeuG.

2015-07-21  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.1.6.

2015-07-20  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (gpg_do_keygen): Support ECC.
	* src/call-ec.c (ecc_check_secret): New.
	* src/ecc.c (check_secret): New.

2015-07-18  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure (keygen): It's always enabled.
	* src/openpgp-do.c (gpg_do_keygen): Support key generation.